Fix for left sidebar not showing on mobile

--- a/src/theme/custom-style/customizations.less
+++ b/src/theme/custom-style/customizations.less
@@ -13,3 +13,9 @@
     margin-right: 15px;
   }
 }
+
+@media (max-width: 768px) {
+  .sidebar {
+    display: block;
+  }
+}
